force-app/main/default/objects/Contact/fields/DNBConnect__D_B_Connect_Contact_Profile__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__D_B_Connect_Contact_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Upon a successful Contact match, D&amp;B Connect populates this field that links the Contact record to a specific Contact ID for display of a custom object with D&amp;B data.</description>
    <inlineHelpText>Upon a successful Contact match, D&amp;B Connect populates this field that links the Contact record to a specific Contact ID for display of a custom object with D&amp;B data.</inlineHelpText>
    <label>D&amp;B Connect Contact Profile</label>
    <referenceTo>DNBConnect__D_B_Connect_Contact_Profile__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>