force-app/main/default/objects/Contact/fields/DNBConnect__matchedDuns__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__matchedDuns__c</fullName>
    <description>This field can be different from the D-U-N-S value held in the custom object. Refer to the Match Driver field for more details on how this record was matched.</description>
    <inlineHelpText>This field can be different from the D-U-N-S value held in the custom object. Refer to the Match Driver field for more details on how this record was matched.</inlineHelpText>
    <label>Matched D-U-N-S</label>
    <length>9</length>
    <type>Text</type>
</CustomField>