force-app/main/default/objects/Contact/fields/DOZISF__ZoomInfo_InboxAI_ID__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__ZoomInfo_InboxAI_ID__c</fullName>
    <externalId>true</externalId>
    <label>ZoomInfo InboxAI ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>