force-app/main/default/objects/Contact/fields/Litmos__Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Access_Level__c</fullName>
    <label>Access Level</label>
    <length>25</length>
    <type>Text</type>
</CustomField>