force-app/main/default/objects/Contact/fields/Litmos__contactcustomfield2__c.field-meta.xml
<CustomField>
    <fullName>Litmos__contactcustomfield2__c</fullName>
    <label>contactcustomfield2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>