force-app/main/default/objects/Contact/fields/Litmos__Courses_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Courses_Assigned__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Courses Assigned</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>