force-app/main/default/objects/Contact/fields/Litmos__Custom_Field_Test__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Custom_Field_Test__c</fullName>
    <label>Custom Field Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>