force-app/main/default/objects/Contact/fields/Litmos__customfield9__c.field-meta.xml
<CustomField>
    <fullName>Litmos__customfield9__c</fullName>
    <label>customfield9</label>
    <length>18</length>
    <type>Text</type>
</CustomField>