force-app/main/default/objects/Contact/fields/Litmos__Litmos_Activated__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Litmos_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Once this field is updated by Litmos, it means that this person is synced to Litmos.</inlineHelpText>
    <label>Litmos Activated</label>
    <type>Checkbox</type>
</CustomField>