force-app/main/default/objects/Contact/fields/Litmos__Litmos_UserId__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Litmos_UserId__c</fullName>
    <label>Litmos UserId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>