force-app/main/default/objects/Contact/fields/Litmos__LitmosID__c.field-meta.xml
<CustomField>
    <fullName>Litmos__LitmosID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Once this field is updated by Litmos, it means this person is synced to Litmos and the Litmos ID for this individual will display.</inlineHelpText>
    <label>LitmosID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>