force-app/main/default/objects/Contact/fields/Litmos__Mapfield1__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Mapfield1__c</fullName>
    <label>Mapfield1</label>
    <length>16</length>
    <type>Text</type>
</CustomField>