force-app/main/default/objects/Contact/fields/Litmos__Testing123__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Testing123__c</fullName>
    <description>Created this to test the new mapping interface.</description>
    <label>Testing123</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>