force-app/main/default/objects/Contact/validationRules/Litmos__Litmos_Activated_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Litmos__Litmos_Activated_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>(Litmos__Deactivate_From_Litmos__c = false &amp;&amp; (PRIORVALUE( Litmos__Litmos_Activated__c ) = true &amp;&amp; PRIORVALUE( Litmos__Litmos_Activated__c ) &lt;&gt; Litmos__Litmos_Activated__c))</errorConditionFormula>
    <errorDisplayField>Litmos__Litmos_Activated__c</errorDisplayField>
    <errorMessage>You can&apos;t edit this field</errorMessage>
</ValidationRule>