force-app/main/default/objects/Contact/validationRules/Litmos__Litmos_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Litmos__Litmos_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>Litmos__LitmosID__c &lt;&gt; Null &amp;&amp; Litmos__LitmosID__c &lt;&gt; &apos;ERROR&apos; &amp;&amp; Litmos__Litmos_Activated__c&amp;&amp;Litmos__Sync_Litmos__c</errorConditionFormula>
    <errorDisplayField>Litmos__Sync_Litmos__c</errorDisplayField>
    <errorMessage>Litmos is already activated for this contact</errorMessage>
</ValidationRule>